# UAV_Transporation

./: .env  .gitignore  AGENTS.md  compile_commands.json  launch.md  quadrotor_ocp.json  task1.md  task2.md  task3.md  task4.md  task5.md  work.md
TUD_payload/: kinodynamic_ocp_2cables.json  kinodynamic_ocp_3cables.json  model.py.backup  nmpc.py  nmpc.py.backup  readme.md
TUD_payload/c_generated_code/: Makefile  acados_sim_solver_kinodynamic_load_2cables.c  acados_sim_solver_kinodynamic_load_2cables.h  acados_sim_solver_kinodynamic_load_3cables.c  acados_sim_solver_kinodynamic_load_3cables.h  acados_solver.pxd  acados_solver_kinodynamic_load_2cables.c  acados_solver_kinodynamic_load_2cables.h  acados_solver_kinodynamic_load_3cables.c  acados_solver_kinodynamic_load_3cables.h  main_kinodynamic_load_2cables.c  main_kinodynamic_load_3cables.c  main_sim_kinodynamic_load_2cables.c  main_sim_kinodynamic_load_3cables.c
TUD_payload/c_generated_code/kinodynamic_load_2cables_model/: kinodynamic_load_2cables_expl_ode_fun.c  kinodynamic_load_2cables_expl_vde_adj.c  kinodynamic_load_2cables_expl_vde_forw.c  kinodynamic_load_2cables_model.h
TUD_payload/c_generated_code/kinodynamic_load_3cables_constraints/: kinodynamic_load_3cables_constr_h_fun.c  kinodynamic_load_3cables_constr_h_fun_jac_uxt_zt.c  kinodynamic_load_3cables_constraints.h
TUD_payload/c_generated_code/kinodynamic_load_3cables_cost/: kinodynamic_load_3cables_cost.h  (+9 more)
c_generated_code/: Makefile  acados_solver.pxd  acados_solver_px4_payload_model.c  acados_solver_px4_payload_model.h  main_px4_payload_model.c  main_sim_px4_payload_model.c
c_generated_code/px4_payload_model_constraints/: px4_payload_model_constr_h_fun.c  px4_payload_model_constr_h_fun_jac_uxt_zt.c  px4_payload_model_constraints.h
c_generated_code/px4_payload_model_model/: px4_payload_model_expl_vde_adj.c  px4_payload_model_expl_vde_forw.c  px4_payload_model_model.h
distribute_payload/: distributed_mpc.py  distributed_single_cable_ocp.json  frame.md
distribute_payload/c_generated_code/: Makefile  acados_sim_solver_distributed_single_cable.c  acados_sim_solver_distributed_single_cable.h  acados_solver.pxd  acados_solver_distributed_single_cable.c  acados_solver_distributed_single_cable.h  main_distributed_single_cable.c  main_sim_distributed_single_cable.c
install/: local_setup.sh  setup.bash  setup.sh
log/: latest_build
multi_payload/: MODEL_DESCRIPTION.md  multi_payload_model.py  multi_payload_model.py.backup  multi_payload_nmpc.py  multi_payload_nmpc.py.backup  multi_payload_ocp.json
multi_payload/c_generated_code/: Makefile  acados_sim_solver_multi_payload.c  acados_sim_solver_multi_payload.h  acados_sim_solver_multi_payload_model.c  acados_sim_solver_multi_payload_model.h  acados_sim_solver_multi_uav_payload.c  acados_sim_solver_multi_uav_payload.h  acados_solver.pxd  acados_solver_multi_payload.c  acados_solver_multi_payload.h  acados_solver_multi_payload_model.c  acados_solver_multi_payload_model.h  acados_solver_multi_uav_payload.c  acados_solver_multi_uav_payload.h  main_multi_payload.c  main_multi_payload_model.c  main_multi_uav_payload.c  main_sim_multi_payload.c  main_sim_multi_payload_model.c  main_sim_multi_uav_payload.c
px4/: px4_model.py  px4_nmpc.py  px4_nmpc.py.backup  quadrotor_ocp.json
px4/c_generated_code/: Makefile  acados_sim_solver_px4_model.c  acados_sim_solver_px4_model.h  acados_solver.pxd  acados_solver_px4_model.c  acados_solver_px4_model.h  main_px4_model.c  main_sim_px4_model.c
px4/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
px4/log/: latest_build
px4_payload/: px4_payload_model.py  px4_payload_model.py.backup  px4_payload_model.py.backup_ned  px4_payload_nmpc.py  px4_payload_nmpc.py.backup  px4_payload_nmpc.py.backup_ned  quadrotor_ocp.json
px4_payload/c_generated_code/: Makefile  acados_sim_solver_px4_payload_model.c  acados_sim_solver_px4_payload_model.h  acados_solver_px4_payload_model.c  acados_solver_px4_payload_model.h  main_px4_payload_model.c  main_sim_px4_payload_model.c
src/multi_payload/: CMakeLists.txt  package.xml
src/multi_payload/launch/: multi_offboard.launch.py  multi_payload_nmpc.launch.py
src/multi_payload/src/: multi_offboard_node.cpp  multi_payload_nmpc_node.cpp
src/plan_env/: CMakeLists.txt  README.md  package.xml
src/plan_env/include/plan_env/: grid_map.h
src/plan_env/launch/: grid_map.launch.py  setup_tf.launch.py
src/plan_env/msg/: ESDFMap.msg
src/plan_env/scripts/: odom_to_tf.py
src/plan_env/src/: grid_map.cpp  grid_map.cpp.backup  grid_map.cpp.bcakup1  grid_map_node.cpp
src/px4_nmpc/: CMakeLists.txt  package.xml
src/px4_nmpc/backup_20251125_085050/: CMakeLists.txt  grid_map.cpp  grid_map.h  grid_map_node.cpp  nmpc_controller.cpp  nmpc_controller.launch.py  package.xml
src/px4_nmpc/examples/: nmpc_with_esdf_example.cpp
src/px4_nmpc/launch/: nmpc_controller.launch.py
src/px4_nmpc/src/: esdf_map_reader.cpp  nmpc_controller.cpp
src/px4_offboard_control/: CMakeLists.txt  README.md
src/px4_payload_estimator/: CMakeLists.txt  package.xml
src/px4_payload_estimator/launch/: payload_observer.launch.py
src/px4_payload_estimator/src/: payload_observer.cpp
src/px4_payload_nmpc/: CMakeLists.txt  README.md  package.xml
src/px4_payload_nmpc/include/px4_payload_nmpc/: esdf_map_reader.h
src/px4_payload_nmpc/launch/: nmpc_controller.launch.py
src/px4_payload_nmpc/src/: esdf_map_reader.cpp  nmpc_controller.cpp  nmpc_controller.cpp.backup  nmpc_controller.cpp.backup1  nmpc_controller.cpp.backup2  nmpc_controller.cpp.backup_ned  payload_estimate.md  payload_odom_from_vrpn.cpp
src/px4ctrl/: CMakeLists.txt  package.xml
src/px4ctrl/config/: params.yaml
src/px4ctrl/msg/: PositionCommand.msg  PositionCommandTrajectory.msg
src/px4ctrl/src/: controller.cpp  controller.hpp  input.cpp  input.hpp  params.cpp  params.hpp  px4ctrl_node.cpp
src/status_estimate/: README.md  package.xml  setup.cfg  setup.py
src/status_estimate/launch/: gazebo_vision_bridge.launch.py
src/status_estimate/status_estimate/: gazebo_vision_bridge.py
(+106 files in other folders)
