<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plan_env</name>
  <version>1.0.0</version>
  <description>ESDF mapping package for PX4 planning - ROS2 port</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Message filters for time synchronization -->
  <depend>message_filters</depend>

  <!-- Image transport -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Point cloud -->
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- Eigen -->
  <depend>eigen3_cmake_module</depend>
  <build_depend>eigen</build_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
